gccida/c1/store_split_bit_field
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1337:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v11; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1338:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1346:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1355:4: error: expected ';' after expression
rtx fixed_bit_field; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1355:5: error: use of undeclared identifier 'fixed_bit_field'; did you mean 'store_bit_field'?
rtx fixed_bit_field; // rax 
    ^~~~~~~~~~~~~~~
    store_bit_field
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:289:1: note: 'store_bit_field' declared here
store_bit_field (str_rtx, bitsize, bitnum, fieldmode, value, total_size)
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1358:4: error: expected ';' after expression
rtx v33; // [rsp+10h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1358:5: error: use of undeclared identifier 'v33'
rtx v33; // [rsp+10h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1367:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v15 = ( __int64)op0[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1401:37: error: invalid suffix 'xmode' on integer constant
v9 = gen_lowpart_common( *(short *)0xmode, value); 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1404:18: error: invalid suffix 'xmode' on integer constant
v11 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1407:18: error: invalid suffix 'xmode' on integer constant
v12 = *(short *)0xmode; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1419:1: error: use of undeclared identifier 'v33'
v33 = v10; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1434:1: error: use of undeclared identifier 'fixed_bit_field'
fixed_bit_field = gen_rtx_CONST_INT( VOIDmode, ( ( unsigned __int64)v10->fld[0].rtwint >> v19) & ~( -1LL << v27)); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1436:1: error: use of undeclared identifier 'fixed_bit_field'
fixed_bit_field = extract_fixed_bit_field( *(short *)0xmode, v10, 0LL, v27, v19, 0LL, 1); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1436:55: error: invalid suffix 'xmode' on integer constant
fixed_bit_field = extract_fixed_bit_field( *(short *)0xmode, v10, 0LL, v27, v19, 0LL, 1); 
                                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1437:7: error: use of undeclared identifier 'fixed_bit_field'; did you mean 'store_bit_field'?
v30 = fixed_bit_field; 
      ^~~~~~~~~~~~~~~
      store_bit_field
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:289:1: note: 'store_bit_field' declared here
store_bit_field (str_rtx, bitsize, bitnum, fieldmode, value, total_size)
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1452:31: error: invalid suffix 'orce' on integer constant
rtx = operand_sub*(short *)0xforce( rtx, v22, v20); 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1452:7: error: use of undeclared identifier 'operand_sub'
rtx = operand_sub*(short *)0xforce( rtx, v22, v20); 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/expmed.c:1459:7: error: use of undeclared identifier 'v33'
v10 = v33; 
      ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_split_bit_field/src/obj/expmed.o] Error 1
